<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivityAves">

  <!-- Título con fondo negro -->
  <TextView
      android:id="@+id/titleTextView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="#000000"
      android:textColor="#FFFFFF"
      android:gravity="start"
      android:padding="10dp"
      android:text="@string/radio_rapaces_y_carroñeros"
      android:textSize="23sp" />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/lista_rapaces_y_carroñeros"
      android:textSize="24sp"
      android:textStyle="bold"
      android:gravity="center"
      android:padding="16dp" />

  <!-- ScrollView para el RadioGroup -->
  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fillViewport="true">

    <RadioGroup
        android:id="@+id/radioGroupAves"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

      <RadioButton
          android:id="@+id/radioAguila"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:drawableStart="@drawable/aguila"
          android:drawablePadding="10dp"
          android:gravity="center_vertical"
          android:padding="10dp"
          android:text="@string/radio_aguila"
          android:textSize="18sp" />

      <RadioButton
          android:id="@+id/radioBuho"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:drawableStart="@drawable/buho"
          android:drawablePadding="10dp"
          android:gravity="center_vertical"
          android:padding="10dp"
          android:text="@string/radio_buho"
          android:textSize="18sp" />

      <RadioButton
          android:id="@+id/radioHalcon"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:drawableStart="@drawable/halcon"
          android:drawablePadding="10dp"
          android:gravity="center_vertical"
          android:padding="10dp"
          android:text="@string/radio_halcon"
          android:textSize="18sp" />

      <RadioButton
          android:id="@+id/radioCernicalo"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:drawableStart="@drawable/cernicalo"
          android:drawablePadding="10dp"
          android:gravity="center_vertical"
          android:padding="10dp"
          android:text="@string/radio_cernicalo"
          android:textSize="18sp" />



      <RadioButton
          android:id="@+id/radioQuebrantahuesos"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:drawableStart="@drawable/quebrantahuesos"
          android:drawablePadding="10dp"
          android:gravity="center_vertical"
          android:padding="10dp"
          android:text="@string/radio_quebrantahuesos"
          android:textSize="18sp" />

      <RadioButton
          android:id="@+id/radioBuitre"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:drawableStart="@drawable/buitre"
          android:drawablePadding="10dp"
          android:gravity="center_vertical"
          android:padding="10dp"
          android:text="@string/radio_buitre"
          android:textSize="18sp" />

    </RadioGroup>
  </ScrollView>
</LinearLayout>
